--- a/ImageMapQueryDockpane.xaml
+++ b/ImageMapQueryDockpane.xaml
@@ -7,35 +7,37 @@
              mc:Ignorable="d"
              d:DataContext="{Binding Path=ImageMapQueryDockpaneViewModel}"
              d:DesignHeight="600" Width="288">
-    <Grid>
-        <TextBlock Margin="7,20,0,564" HorizontalAlignment="Left"><Run Text="服務選取"/></TextBlock>
-        <ComboBox x:Name="cmbService" 
+    <StackPanel Margin="4,4,4,-5">
+        <Grid>
+            <TextBlock Margin="7,20,0,564" HorizontalAlignment="Left"><Run Text="服務選取"/></TextBlock>
+            <ComboBox x:Name="cmbService" 
             DisplayMemberPath="ServiceName" 
             SelectedValuePath="ServiceName" 
             IsEditable="True"             
             Margin="65,12,0,558" Height="30" HorizontalAlignment="Left" Width="213"/>
-        <Label Content="條件設定(註:需有設定查詢欄位名的服務才有效)" Margin="2,51,10,524"/>
-        <Label Content="條件起:" Margin="2,92,237,0" VerticalAlignment="Top" Height="23"/>
-        <TextBox x:Name="txtFilterFrom" 
-            Height="30" Margin="54,85,0,485" HorizontalAlignment="Left" Width="95"/>
-        <Label Content="訖:" Margin="153,92,108,485"/>
-        <TextBox x:Name="txtFilterEnd" 
-            Height="30" Margin="183,86,0,484" HorizontalAlignment="Left" Width="95"/>
-        <Button x:Name="ImageQueryButton" Content="查詢" 
+            <Label Content="條件設定(註:需有設定查詢欄位名的服務才有效)" Margin="2,51,10,524"/>
+            <Label Content="條件起:" Margin="2,92,225,0" VerticalAlignment="Top" Height="23"/>
+            <TextBox x:Name="txtFilterFrom" 
+            Height="30" Margin="65,87,0,487" HorizontalAlignment="Left" Width="84"/>
+            <Label Content="訖:" Margin="153,92,97,485"/>
+            <TextBox x:Name="txtFilterEnd" 
+            Height="30" Margin="188,88,0,486" HorizontalAlignment="Left" Width="90"/>
+            <Button x:Name="ImageQueryButton" Content="查詢" 
             Click="ImageQueryButton_Click" 
                 Margin="7,172,10,0" Height="24" VerticalAlignment="Top" 
                 />
-        <Label Content="查詢結果(註:雙按項目可定位地圖)" Margin="2,215,98,360"/>
-        <ListBox 
+            <Label Content="查詢結果(註:雙按項目可定位地圖)" Margin="2,215,26,360"/>
+            <ListBox 
             x:Name="lstImageQuery"     
             DisplayMemberPath="showStr"
             SelectedValuePath="posStr"    
             MouseDoubleClick="LstImageQuery_MouseDoubleClick"
-                 Margin="5,245,10,90" 
+                 Margin="5,245,10,179" Height="180" 
                  />
-        <Button x:Name="ImageQueryClearButton" Content="清除" 
-            Click="ImageQueryClearButton_Click" Margin="230,549,0,0" Width="48" VerticalAlignment="Top" Height="24" HorizontalAlignment="Left" 
+            <Button x:Name="ImageQueryClearButton" Content="清除" 
+            Click="ImageQueryClearButton_Click" Margin="230,450,0,0" Width="48" VerticalAlignment="Top" Height="24" HorizontalAlignment="Left" 
                 />
-        <Label Content="(註:依服務設定的查詢欄名無條件請設成空白跳過)" Margin="0,130,0,445" HorizontalAlignment="Center" Width="278"/>
-    </Grid>
+            <Label Content="(註:依服務設定的查詢欄名無條件請設成空白跳過)" Margin="0,130,0,445" HorizontalAlignment="Center" Width="278"/>
+        </Grid>
+    </StackPanel>
 </UserControl>
